[PaintTouchActionRects] Record overflow paint rect as hit test rect

Since touch action rect needs to be painted in the space of scrolling
contents layer, and we record border box rect as touch action rect in
block painter, we ended up repainting on every frame.

This CL fixes this bug by recording overflow paint rect in box painter.

Bug: 888269
Cq-Include-Trybots: luci.chromium.try:linux_layout_tests_slimming_paint_v2;master.tryserver.blink:linux_trusty_blink_rel
Change-Id: Ifefac631604355e1b33be92a37ffdb0a0301cd25
Reviewed-on: https://chromium-review.googlesource.com/c/1259946
Reviewed-by: Philip Rogers <pdr@chromium.org>
Commit-Queue: Philip Rogers <pdr@chromium.org>
Cr-Commit-Position: refs/heads/master@{#603335}
Former-commit-id: 4294591ceb97fab1465d9490484041a708a9ba38