third_party/blink/renderer/core/paint/view_painter.h
@@ -24,6 +24,8 @@ class ViewPainter {
 
  private:
   const LayoutView& layout_view_;
+
+  void PaintBoxDecorationBackgroundInternal(const PaintInfo&);
 };
 
 }  // namespace blink
